--- a/static/hello.html
+++ b/static/hello.html
@@ -11,7 +11,7 @@
 
     <div class="box">
         <img src="{{ url_for('static', path='/logo.png') }}" class="logo"/>
-        <h2 class="title2">{{ hi }}</h2>
+        <h2 class="title2 hi">{{ hi }}</h2>
         <br>
         <h2 class="title2">OpenAPI文档:</h2>
         <a href="{{ api_url }}" target="_blank" class="tag_a">{{ api_url }}</a>
