--- a/static/hello.html
+++ b/static/hello.html
@@ -6,7 +6,7 @@
     <link href="{{ url_for('static', path='/style.css') }}" rel="stylesheet">
     <link rel="shortcut  icon" href="{{ url_for('static', path='/favicon.ico') }}" type="image/x-icon" />
 </head>
-<body class="f_box" style="background-image: url('{{ background_img }}')">
+<body class="f_box" style="background-color: #2d3a4b">
 <div>
 
     <div class="box">
